# alloc-validate

./: .gitignore  Dockerfile  GCP_ONBOARDING.md  GPU_TESTING.md  LICENSE  LOCAL_DUAL_L4_TESTING.md  Makefile  README.md  bootstrap.py  pyproject.toml
.github/workflows/: validate.yml
case-study/: after.py  before.py
diagnose-targets/: clean_script.py  dist_issues.py  dl_issues.py  hf_trainer_issues.py  memory_issues.py  precision_issues.py
distributed/: README.md  models.py  train_3d.py  train_3d_fsdp.py  train_ddp.py  train_fsdp.py  train_pp.py  train_pp_dp.py  train_tp.py  train_tp_dp.py  validate.sh
huggingface/: README.md  train.py  validate.sh
huggingface/expected/: schema.json
lightning/: README.md  train.py  validate.sh
lightning/expected/: schema.json
pytorch/: README.md  train.py  validate.sh
pytorch/expected/: schema.json
ray/: README.md  train.py  validate.sh
scan-only/: README.md  ghost_target.py  ghost_target_large_cnn.py  ghost_target_medium_cnn.py  ghost_target_mlp_large.py  ghost_target_mlp_small.py  ghost_target_small_cnn.py  validate.sh
scripts/: check_artifact.py  compare_baselines.py  eval_recommendations.py  local_dual_l4_stress.sh  record_baseline.sh  run_matrix.py  validate_fleet.sh  validate_topology.sh  validate_upload.sh
tests/: conftest.py  test_artifact_contract.py  test_callbacks.py  test_case_study.py  test_cli_smoke.py  test_config.py  test_diagnose.py  test_diagnose_explain.py  test_ghost.py  test_merge.py  test_phase_timing.py  test_release_gates.py  test_repo_hygiene.py  test_run.py  test_scan.py
(+6 files in other folders)
